properly sort found jar file and select newest

--- a/cpp/Aurora.vcxproj
+++ b/cpp/Aurora.vcxproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="aurora_steam.h" />
+    <ClInclude Include="semver.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
